templates/assets/style.css
.Container {
  font-size: 14px;
  line-height: 1;
  color: #333;
  font-family: monaco;
}

.Title {
  font-weight: bold;
  font-size: 30px;
}

.Sourceodes {
	border-collapse: collapse;
	border-spacing: 0;
  border: 1px solid #eee;
  width: 100%;
}

.Sourceodes-line {}


.Sourceodes-line__index, .Sourceodes-line__body {
  padding: 4px 4px;
  font-weight: normal;
}

.Sourceodes-line:first-child .Sourceodes-line__index, .Sourceodes-line:first-child .Sourceodes-line__body {
  padding-top: 16px;
}

.Sourceodes-line__index {
  padding-right: 8px;
  font-size: 12px;
  color: #999;
  border: none;
  border-right: 1px solid #eee;
  text-align: right;
}
.Sourceodes-line__body {
  padding-left: 12px;
}

.Sourceodes-line__body pre {
  margin: 0;
}

.Sourceodes-line__body code {}

